--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*===============Geral===============*/
 :root {
   font-size: 62.2%; /* 1rem = 10px*/
 
@@ -26,15 +27,43 @@ body {
 
   text-align: center;
 }
-
-header{
+.container{
   width: 37.5rem;
   margin: 0 auto;
-
-  padding: 4.1rem 2.4rem 0;
 }
 
-h4 {
+/*===============Navegação===============*/
+nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.6rem 2.4rem;
+
+  position: fixed;
+}
+
+
+/*===============Header===============*/
+header {
+  padding: 4.1rem 2.4rem 0;
+}
+header::before{
+  content: '';
+  
+  width: 100vw;
+  height: 108rem;
+
+  background-color: var(--brand-light);
+
+  display: block;
+
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
+
+header h4 {
   font-size: 1.4rem;
   line-height: 2.1rem;
   color: var(--brand);
@@ -43,7 +72,7 @@ h4 {
   margin-bottom: 1.6rem;
 }
 
-h1 {
+header h1 {
   font-size: 3.4rem;
 
   color: var(--headline);
@@ -51,7 +80,7 @@ h1 {
   margin-bottom: 2.4rem;
 }
 
-p {
+header p {
   color: var(--paragraph);
   font-size: 1.8rem;
   line-height: 2.7rem;
@@ -59,12 +88,12 @@ p {
   margin-bottom: 3.2rem;
 }
 
-button {
+header button {
   background: var(--brand);
-  
+
   border: none;
   border-radius: 4rem;
-  
+
   width: 263px;
   height: 52px;
 
@@ -81,5 +110,44 @@ button {
   font-weight: 700;
 
   text-transform: uppercase;
+}
 
+header img{
+  width: 26.4rem;
+  
+  margin: 0 auto;
+  
+  display: block;
+  object-position: 0 2rem ;
+}
+
+.stats {
+  width: 32.7rem;
+  padding: 4rem 0;
+
+  background-color: var(--brand-02);
+
+  border: 1px solid var(--brand-light);
+
+  display: flex;
+  gap: 6rem;
+  flex-direction: column;
+  justify-content: center;
+
+  border-radius: 0.6rem;
+}
+
+.stat h3 {
+  font-size: 4.8rem;
+  line-height: 130%;
+
+  margin: 0 0 0.4rem;
+}
+.stat p {
+  margin: 0;
+
+  font-size: 1.6rem;
+  line-height: 150%;
+
+  color: var(--brand);
 }
