--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
   --white: hsl(0, 0%, 100%);
+
+  --nav-height: 7.2rem;
 }
 * {
   padding: 0;
@@ -18,8 +20,14 @@
 
   box-sizing: border-box;
   text-decoration: none;
+  list-style: none;
 
   font-family: 'DM Sans', sans-serif;
+}
+
+html, body{
+  width: 100%;
+  height: 100%;
 }
 
 body {
@@ -27,31 +35,48 @@ body {
 
   text-align: center;
 }
-.container{
+.container {
   width: 37.5rem;
-  margin: 0 auto;
+  margin-inline: auto;
+  padding-inline:2.4rem;
 }
 
 /*===============Navegação===============*/
-nav{
+nav {
+  display: flex;
+
+  height: var(--nav-height);
+
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+nav .container{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.6rem 2.4rem;
-
-  position: fixed;
 }
-
+nav.scroll{
+  width: 100vw;
+  background-color: var(--brand);
+}
+nav.scroll svg:nth-child(1) path{
+  fill: var(--white);
+}
+nav.scroll svg:nth-child(2) path{
+  stroke: var(--white);
+}
 
 /*===============Header===============*/
 header {
-  padding: 4.1rem 2.4rem 0;
+  margin-top: calc(4.1rem + var(--nav-height));
 }
-header::before{
+header::before {
   content: '';
-  
-  width: 100vw;
-  height: 108rem;
+
+  width: 100%;
+  height: calc(108rem + var(--nav-height)) ;
 
   background-color: var(--brand-light);
 
@@ -112,13 +137,13 @@ header button {
   text-transform: uppercase;
 }
 
-header img{
+header img {
   width: 26.4rem;
-  
+
   margin: 0 auto;
-  
+
   display: block;
-  object-position: 0 2rem ;
+  object-position: 0 2rem;
 }
 
 .stats {
