--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
 :root {
   font-size: 62.2%; /* 1rem = 10px*/
 
-  --brand: hsl(170deg 97% 26%);
-  --brand-hover: hsl(170, 100%, 14%);
+  --hue: 290;
+  --brand: hsl(var(--hue), 97%, 26%);
+  --brand-hover: hsl(var(--hue), 100%, 14%);
   --brand-02: hsl(39, 100%, 97%);
-  --brand-light: hsl(148, 23%, 89%);
+  --brand-light: hsl(calc(var(--hue) - 22), 23%, 89%);
   --brand-light-02: hsl(180, 14%, 97%);
 
   --headline: hsl(210, 11%, 15%);
@@ -46,7 +47,7 @@ body {
   margin-inline: auto;
   padding-inline: 2.4rem;
 }
-img{
+img {
   width: 100%;
 }
 section {
@@ -82,10 +83,60 @@ section header h1 {
 
 section .content p {
   font-weight: 400;
-  font-size: 1.6rem;  
-  line-height: 150%;  
+  font-size: 1.6rem;
+  line-height: 150%;
 
   color: var(--paragraph);
+}
+.button {
+  padding: 1.6rem 3.2rem;
+
+  border-radius: 4rem;
+  background-color: var(--brand);
+
+  text-transform: uppercase;
+
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+
+  color: var(--white);
+  font-weight: 700;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+
+  width: fit-content;
+
+  transition: 200ms;
+}
+.button:hover {
+  background-color: var(--brand-hover);
+}
+.socialLinks {
+  display: flex;
+  gap: 3.2rem;
+  align-items: center;
+  justify-content: center;
+}
+/*===============Custom Colors===============*/
+#services .card circle {
+  fill: var(--brand-light);
+}
+#navigation .logo path[fill*='#00856F'],
+#backToTopButton circle {
+  fill: var(--brand);
+}
+body.menuExpended #navigation .logo path,
+#navigation.scroll .logo path {
+  fill: var(--white);
+}
+
+#contact li path,
+#navigation .container .openMenu path {
+  stroke: var(--brand);
+}
+#navigation.scroll .container .openMenu path {
+  stroke: var(--white);
 }
 
 /*===============Navegação===============*/
@@ -99,6 +150,8 @@ nav {
   width: 100vw;
 
   z-index: 100;
+
+  transition: 300ms;
 }
 nav .container {
   display: flex;
@@ -108,12 +161,6 @@ nav .container {
 nav.scroll {
   width: 100vw;
   background-color: var(--brand);
-}
-nav.scroll .logo path {
-  fill: var(--white);
-}
-nav.scroll button path {
-  stroke: var(--white);
 }
 
 nav button {
@@ -142,7 +189,7 @@ body.menuExpended .closeMenu {
   visibility: visible;
 }
 
-.menu{
+.menu {
   transform: translateY(-100%);
 }
 
@@ -160,8 +207,8 @@ body.menuExpended .menu {
 
   padding-top: calc(var(--nav-height) + 6rem);
 
-  transition:transform 400ms;
-  
+  transition: transform 400ms;
+
   transform: translateY(0);
 }
 
@@ -190,14 +237,16 @@ body.menuExpended .menu {
   line-height: 1.8rem;
   color: var(--brand);
 
-  margin-top: 4.8rem;
+  margin: 4.8rem 0 0;
+
+  transition: 200ms;
+}
+.menu .button:hover {
+  color: var(--white);
+  background-color: var(--brand);
+  filter: brightness(1.3);
 }
 .menu .socialLinks {
-  display: flex;
-  gap: 3.2rem;
-  align-items: center;
-  justify-content: center;
-
   margin-top: 8rem;
 }
 
@@ -241,28 +290,9 @@ body.menuExpended button path {
   margin-bottom: 3.2rem;
 }
 
-#home button {
-  background: var(--brand);
-
-  border: none;
-  border-radius: 4rem;
-
-  width: 263px;
-  height: 52px;
-
-  margin: 0 auto 6rem;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1.6rem;
-
-  color: var(--white);
-  font-size: 1.4rem;
-  line-height: 1.8rem;
-  font-weight: 700;
-
-  text-transform: uppercase;
+#home .button {
+  margin: 3.2rem 0 6rem;
+  margin-inline: auto;
 }
 
 #home img {
@@ -341,11 +371,11 @@ body.menuExpended button path {
 
 /*===============About===============*/
 
-#about{
+#about {
   padding-block: 10rem;
   background-color: var(--brand-02);
 }
-#about header{
+#about header {
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
@@ -353,12 +383,70 @@ body.menuExpended button path {
 
   margin-bottom: 2.4rem;
 }
-#about .content{
+#about .content {
   display: flex;
   flex-direction: column;
   gap: 6rem;
-
 }
 #about .content p {
   text-align: left;
+}
+
+/*===============Contact===============*/
+#contact > :not(.content img) {
+  text-align: left;
+}
+#contact header h2 {
+  width: 26.3rem;
+}
+
+#contact .content ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  margin-top: 3.2rem;
+}
+#contact .content li {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+#contact .button {
+  margin: 3.2rem 0 6rem;
+}
+
+/*===============Footer===============*/
+footer {
+  background-color: var(--brand);
+  padding-block: 6rem;
+  text-align: left;
+}
+footer p {
+  margin: 2.4rem 0 3.2rem;
+
+  font-size: 1.6rem;
+  line-height: 2;
+  color: var(--brand-02);
+}
+footer .socialLinks {
+  justify-content: flex-start;
+}
+/*===============Back to Top===============*/
+
+#backToTopButton {
+  position: fixed;
+  right: 2.2rem;
+  bottom: 1rem;
+
+  opacity: 0;
+  visibility: hidden;
+
+  transform: translateY(150%);
+  transition: 350ms;
+}
+
+#backToTopButton.show {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
 }
