--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
   --hue: 290;
   --brand: hsl(var(--hue), 97%, 26%);
   --brand-hover: hsl(var(--hue), 100%, 14%);
-  --brand-02: hsl(39, 100%, 97%);
+  --brand-02: hsl(calc(var(--hue) - 131), 100%, 97%);
   --brand-light: hsl(calc(var(--hue) - 22), 23%, 89%);
-  --brand-light-02: hsl(180, 14%, 97%);
+  --brand-light-02: hsl(calc(var(--hue) + 10), 14%, 97%);
 
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
@@ -43,7 +43,7 @@ body {
   background-color: var(--brand-light-02);
 }
 .container {
-  width: 37.5rem;
+  width: min(50rem, 100%);
   margin-inline: auto;
   padding-inline: 2.4rem;
 }
@@ -168,6 +168,11 @@ nav button {
   border: none;
   cursor: pointer;
 }
+
+nav .menu,
+nav .closeMenu {
+  position: fixed;
+}
 /*===============Menu===============*/
 body.menuExpended {
   overflow: hidden;
@@ -190,11 +195,11 @@ body.menuExpended .closeMenu {
 }
 
 .menu {
+  position: fixed;
   transform: translateY(-100%);
 }
 
 body.menuExpended .menu {
-  position: fixed;
   top: 0;
   left: 0;
   background-color: var(--brand);
@@ -296,8 +301,6 @@ body.menuExpended button path {
 }
 
 #home img {
-  width: 26.4rem;
-
   margin: 0 auto;
 
   display: block;
@@ -305,8 +308,8 @@ body.menuExpended button path {
 }
 
 .stats {
-  width: 32.7rem;
-  padding: 4rem 0;
+  width: 100%;
+  padding-block: 4rem;
 
   background-color: var(--brand-02);
 
@@ -450,3 +453,145 @@ footer .socialLinks {
   visibility: visible;
   transform: translateY(0);
 }
+
+/*===============Responsive===============*/
+/*Pro Fold*/
+@media (max-width: 313px) {
+  :root {
+    font-size: 50%;
+  }
+}
+
+@media (min-width: 1024px) {
+  /*===Reset pro Desktop===*/
+  nav#navigation .container * {
+    margin: 0;
+    padding: 0;
+    visibility: initial;
+    display: initial;
+    opacity: initial;
+    flex-direction: initial;
+    position: initial;
+    font-size: initial;
+    font-weight: initial;
+    transform: initial;
+    color: initial;
+    background-color: initial;
+  }
+  
+  nav#navigation .closeMenu,
+  nav#navigation .openMenu,
+  nav#navigation .socialLinks{
+    display: none;
+  }
+  
+  /*===Geral===*/
+  .container{
+    width: min(136.6rem, 100%);
+  }
+  /*===Navigation===*/
+  nav#navigation .menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    width: 60%;
+  }
+  nav#navigation .menuLinks{
+    display: flex;
+    gap: 3.2rem;
+    
+  }
+  nav#navigation .menuLinks a{
+    color: var(--brand);
+    opacity: 0.7;
+    padding-bottom: 2.4rem;
+
+    transition: 400ms;
+  }
+  nav#navigation .menuLinks a:hover{
+    font-weight: 700;
+    opacity: 1;
+  }
+  nav#navigation .menuLinks a:focus{
+    font-weight: 700;
+    opacity: 1;
+    border-bottom: 2px solid var(--brand);
+  }
+
+  nav#navigation .menu a.button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 1rem 2.4rem;
+
+    border: 0.1rem solid var(--brand);
+    border-radius: 4rem;
+    
+    color: var(--brand);
+
+    font-weight: 700;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+
+  }
+  nav#navigation .menu a.button:hover{
+    border-color: var(--white);
+    background-color: var(--brand);
+    
+    color: var(--white);
+  }
+  nav#navigation.scroll .menuLinks a{
+    color: var(--brand-light-02);
+    opacity: 0.6;
+  }
+  nav#navigation.scroll .menuLinks a:hover{
+    font-weight: 700;
+    opacity: 1;
+  }
+  nav#navigation.scroll .menuLinks a:focus{
+    font-weight: 700;
+    opacity: 1;
+    border-bottom-color: var(--brand-light-02);
+  }
+
+  nav#navigation.scroll .menu a.button{
+    border-color: var(--white);
+
+    color: var(--white);
+  }
+  nav#navigation.scroll .menu a.button:hover{  
+    background-color: var(--white);
+    
+    color: var(--brand);
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
+
+
+
